fixing merge conflict